# Nomad-Nest

./: .flaskenv  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  run.py  structure.md
.github/workflows/: ci_precommit.yml  ci_smoke_test.yml
app/: __init__.py  extensions.py
app/config/: __init__.py  settings.py
app/data/: seed.py
app/models/: __init__.py  city.py  country.py  state_province.py
app/routes/: __init__.py  api.py  compare.py  main.py
app/static/css/: styles.css
app/static/js/: location_selection.js
app/templates/: base.html
app/templates/compare/: form.html
app/templates/main/: index.html
app/tests/: __init__.py
app/utils/: import_geonames.py
docs/architecture/: structure.md
migrations/versions/: 26c06c8c8ccb_add_is_cached_column_to_city_model.py  29ca4a420cc4_recreating_all_tables_correctly.py
src/nomad_nest/: __init__.py  extensions.py
src/nomad_nest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/nomad_nest/config/: __init__.py  settings.py
src/nomad_nest/models/: __init__.py  city.py  country.py  state_province.py
src/nomad_nest/routes/: __init__.py  api.py  compare.py  main.py
src/nomad_nest/static/css/: styles.css
src/nomad_nest/templates/: base.html
src/nomad_nest/templates/compare/: form.html
src/nomad_nest/templates/main/: home.html  index.html
src/nomad_nest/tests/: __init__.py
src/nomad_nest/utils/: import_geonames.py
tests/smoke/: test_smoke.py
