[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nomad-nest"
version = "0.1.0"
description = "Global Cost of Living Calculator App"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Brice A. Nelson", email = "brice@devbybrice.com" }
]
license = { text = "MIT" }
keywords = ["flask", "backend", "cost-of-living", "global-cities", "sqlalchemy"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

# Main dependencies (from requirements.txt)
dependencies = [
  "alembic==1.14.0",
  "bcrypt==4.2.1",
  "beautifulsoup4==4.10.0",
  "celery==5.4.0",
  "Flask==3.1.0",
  "Flask-Bcrypt==1.0.1",
  "flask-bootstrap5==0.1.dev1",
  "Flask-Caching==2.3.1",
  "Flask-JWT-Extended==4.7.1",
  "Flask-Login==0.6.3",
  "Flask-Migrate==4.0.7",
  "Flask-SQLAlchemy==3.1.1",
  "Flask-WTF==1.2.2",
  "gunicorn==23.0.0",
  "itsdangerous==2.2.0",
  "Jinja2==3.1.4",
  "Mako==1.3.6",
  "MarkupSafe==2.1.5",
  "numpy==2.1.1",
  "psycopg2-binary==2.9.10",
  "python-dotenv==1.0.1",
  "redis==5.2.1",
  "requests==2.32.3",
  "SQLAlchemy==2.0.36",
  "Werkzeug==3.1.3",
  "WTForms==3.2.1"
]

[project.optional-dependencies]
dev = [
  "black==21.10b0",
  "isort==5.6.4",
  "pytest",
  "pytest-cov",
  "autopep8==1.6.0",
  "yapf==0.32.0",
  "Sphinx==4.3.2",
  "mkdocs==1.1.2"
]

docs = [
  "sphinx==4.3.2",
  "alabaster==0.7.12",
  "numpydoc==1.2"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[tool.flask]
app = "app:create_app"
env = "development"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
